[project]
name = "matpvl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[d]>=25.1.0",
    "fastapi>=0.115.13",
    "invoke>=2.2.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pythonbible>=0.13.1",
    "radon>=6.0.1",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "vulture>=2.14",
]
